--- a/less/main.less
+++ b/less/main.less
@@ -2,6 +2,8 @@
 @import "./mixins.less";
 @import "./settings.less";
 @import "./fonts.less";
+@import "./components/edit-btn.less";
+@import "./components/close-btn.less";
 @import "./components/form.less";
 @import "./components/big-title.less";
 @import "./components/header.less";
@@ -13,5 +15,12 @@
 @import "./components/add-new-project.less";
 @import "./components/new-client.less";
 @import "./components/field-settings.less";
+// выпадающтй список, стили для эл бибилиотеки
 @import "./components/datepicker.less";
+// выпадающтй список, стили для эл бибилиотеки
 @import "./components/dropdown.less";
+// страница типы проектов
+@import "./components/type-projects.less";
+@import "./components/result-type-projects.less";
+// попап на стр. с типами
+@import "./components/add-new-type.less";
