--- a/less/components/controls.less
+++ b/less/components/controls.less
@@ -103,3 +103,50 @@
     background-image: url(../img/icons/gamburger-white-icon.png);
   }
 }
+
+.controls__arrow {
+  border-radius: 50%;
+  border: 1px solid @color-border;
+  width: 40px;
+  height: 40px;
+  position: relative;
+  margin-right: 10px;
+
+  &:hover {
+    opacity: 0.7;
+  }
+}
+
+.contols__arrow--up {
+
+  &::after {
+    content: "";
+    display: block;
+    width: 22px;
+    height: 12px;
+    background-image: url(../img/icons/controls-arrow-up-icon.png);
+    background-size: cover;
+    background-position: 50%;
+    background-repeat: no-repeat;
+    position: absolute;
+    top: 13px;
+    left: 8px;
+  }
+}
+
+.contols__arrow--down {
+
+  &::after {
+    content: "";
+    display: block;
+    width: 22px;
+    height: 12px;
+    background-image: url(../img/icons/controls-arrow-down-icon.png);
+    background-size: cover;
+    background-position: 50%;
+    background-repeat: no-repeat;
+    position: absolute;
+    top: 13px;
+    left: 8px;
+  }
+}
