--- a/less/components/popup.less
+++ b/less/components/popup.less
@@ -1,11 +1,12 @@
 .popup {
-  position: fixed;
+  position: absolute;
   display: none;
   box-shadow: 0 20px 30px 0 rgba(18, 59, 59, 0.09);
   background-color: #ffffff;
   top: 50%;
   left: 50%;
   z-index: 2000;
+  transform: translateY(-50%);
 }
 
 .popup__btn-close {
